Time component rendering as intended, select timezone/format working, working render target image based on time-zone

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,12 @@
 /* ALL COMPONENT STYLES */
 
 
+/* NAVBAR STYLES */
+
+.fa-bars-open {
+  background-color: red;
+}
+
 /* LANDING PAGE STYLES */
 
 
