--- a/src/App.css
+++ b/src/App.css
@@ -20,25 +20,36 @@
 
 .quotes-grid-container {
   display: flex;
-  flex-direction: row;
   flex-wrap: wrap;
-  
-  /* display: block;
-  width: 1250px; */
-}
-
-.quotes-items-row {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-around;
-}
-
-.quotes-grid-image {
-  /* display: block; */
+  max-width: 95vw;
+  height: 40vh;
   margin-left: auto;
   margin-right: auto;
-  width: 70%;
 }
+.quotes-grid-item {
+  display: flex;
+  flex-direction: column; 
+  max-height: 100%;
+  max-width: 33%; 
+  margin-left: auto;
+  margin-right: auto;
+  border: solid black 2px;
+}
+/* .quotes-grid-image {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  object-fit: cover;
+  width: auto;
+  height: 30%;
+} */
+/* .quotes-grid-content {
+  margin-left: auto;
+  margin-right: auto;
+  width: 70;
+  overflow: scroll;
+} */
+
 /* MEDIA QUERIES */
 
 
