--- a/src/App.css
+++ b/src/App.css
@@ -21,35 +21,52 @@
 .quotes-grid-container {
   display: flex;
   flex-wrap: wrap;
-  max-width: 95vw;
-  height: 40vh;
+  max-width: 95vw;   /* flex-wrap causing this to show 2 images wide when window width compressed */
+  height: 60vh; /* CHANGE THIS IF NAVBAR/HEADER */
   margin-left: auto;
   margin-right: auto;
 }
 .quotes-grid-item {
   display: flex;
   flex-direction: column; 
+  justify-content: center;
+  align-items: center; 
   max-height: 100%;
-  max-width: 33%; 
+  width: 33%;
   margin-left: auto;
   margin-right: auto;
-  border: solid black 2px;
+  border: solid black 2px; /* remove */
+  position: relative;
 }
-/* .quotes-grid-image {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  object-fit: cover;
-  width: auto;
+.quotes-grid-image {
+  display: flex;
+  width: 90%;
+  height: 90%;
+  border: solid black 5px;
+  border-radius: 100px;
+}
+.quotes-grid-modal-button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  z-index: 1;
+  opacity: .50;
   height: 30%;
-} */
-/* .quotes-grid-content {
-  margin-left: auto;
+  width: 45%;
+  border-radius: 10px;
+}
+.quotes-grid-text {
+  /* display: flex; */
+  position: absolute;
+  bottom: 11%;
+  width: 78%;
   margin-right: auto;
-  width: 70;
-  overflow: scroll;
-} */
-
+  margin-left: auto;
+  text-align: center;
+  z-index: 1;
+  color: red;
+}
 /* MEDIA QUERIES */
 
 
