--- a/src/App.css
+++ b/src/App.css
@@ -3,9 +3,6 @@
 
 /* NAVBAR STYLES */
 
-.fa-bars-open {
-  background-color: red;
-}
 
 /* LANDING PAGE STYLES */
 
@@ -89,6 +86,12 @@
 .modal-image {
   max-height: 100%;
   max-width: 100%;
+}
+.modal-comment {
+  display: none;
+}
+.modal-comment-active {
+  display: block;
 }
 
 /********** FONT-AWESOME BUTTONS **********/
