--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,5 @@
 /* ALL COMPONENT STYLES */
 
-.red-top {
-  color: red;
-  z-index: 1;
-}
-
 .font-huge {
   font-size: 6em;
 }
@@ -23,6 +18,7 @@
 }
 
 /* LOGIN STYLES */
+
 .login-cont {
   display: flex;
   flex-direction: column;
@@ -54,6 +50,7 @@
 }
 
 /* NAVBAR STYLES */
+
 .bm-menu-wrap {
   left: 0;
 }
@@ -123,9 +120,8 @@
   color: #FFFFFF;
 }
 
-
-
 /* LANDING PAGE STYLES */
+
 .landing-main {
   display: flex;
   flex-direction: column;
@@ -133,7 +129,6 @@
   align-items: center;
   color: white
 }
-
 .landing-quote {
   display: flex;
   justify-content: center;
@@ -184,7 +179,6 @@
   border-radius: 80px;
 }
 .quotes-grid-text {
-  /* display: flex; */
   position: absolute;
   bottom: 15%;
   width: 78%;
@@ -205,22 +199,50 @@
 /***********   MODAL STYLES ***********/
 
 .modal-image-cont {
-  display: flex;
-  justify-content: flex-start;
-  height: 90vh;
+  display: block;
+  max-height: 100vh;
   position: relative;
 }
 .modal-image {
-  max-height: 100%;
-  max-width: 100%;
+  display: flex;
+  height: 90%;
+  width: 90%;
+  margin-right: auto;
+  margin-left: auto;
+  position: relative;
+  border: solid black 5px;
+  border-radius: 80px;
+}
+.modal-quote {
+  position: absolute;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  text-align: center;
+  margin: 0;
+  right: 0;
+  left: 0;
+  top: 0;
+  bottom: 0;
+  margin-right: auto;
+  margin-left: auto;
+  width: 90%;
+  height: 100%;
+  font-size: 1.9em;
+  border-radius: 80px;
+  background: linear-gradient(rgba(10, 10, 10, 0.20), transparent, rgba(10, 10, 10, 0.20));
+  background-size: cover;
+  color: white;
+  overflow: auto;
 }
 .modal-comment {
   display: none;
 }
 .modal-comment-active {
+  position: relative;
+  right: 0;
   display: block;
 }
-
 
 /********** FONT-AWESOME BUTTONS **********/
 
@@ -257,9 +279,3 @@
 }
 
 /* MEDIA QUERIES */
-
-
-
-
-
-
