--- a/src/App.css
+++ b/src/App.css
@@ -29,6 +29,16 @@
   opacity: .70; 
 }
 
+
+
+
+
+
+
+
+
+
+
 /* LOGIN STYLES */
 
 .login-cont {
@@ -55,6 +65,16 @@
   background-color: #44444C;
   box-shadow: 0 0 200px rgba(0,0,0,0.9) inset;
 }
+
+
+
+
+
+
+
+
+
+
 
 /* NAVBAR STYLES */
 
@@ -122,6 +142,17 @@
   color: #FFFFFF;
 }
 
+
+
+
+
+
+
+
+
+
+
+
 /* LANDING PAGE STYLES */
 
 .landing-main { /* theme */ 
@@ -163,6 +194,18 @@
   margin-right: auto;
   margin-left: auto;
 }
+
+
+
+
+
+
+
+
+
+
+
+
 
 /* QUOTES STYLES */
 .home-button-center {
@@ -223,12 +266,47 @@
   color: white;
 }
 
+
+
+
+
+
+
+
+
+
+
 /***********   MODAL STYLES ***********/
-.styles_modal__gNwvD { /* PARENT MODAL CONTAINER */
-  background-color: transparent;
-  max-width: 1200px;
+
+/* Comment Content */
+.comment-modal-right-content {
+  position: absolute;
+  right: 0;
+  margin-right: 5vw;
+  max-height: 95vh;
+  width: 15vw;
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  overflow: auto;
+  background-color: #44444C;
+  box-shadow: 0 0 200px rgba(0,0,0,0.9) inset;
+  border-radius: 25px;
 }
 
+.modal-comment-cont {
+
+}
+.no-comments {
+  text-align: center;
+}
+/* Image Content */
+.image-modal-center-overlay {
+  background-color: transparent;
+  justify-content: flex-end;
+  width: 70.75vw;
+}
 .modal-image-cont {
   display: block;
   height: 95vh;
