--- a/src/App.css
+++ b/src/App.css
@@ -19,9 +19,10 @@
   background-color: #4DAAF6;
   border: solid black 3px;
   border-radius: 10px;
+  opacity: .25;
 }
 .button-light:hover {
-  background-color: #79BFF8;
+  opacity: 1;
   cursor: pointer;
 }
 .cursor-select {
@@ -136,10 +137,16 @@
   margin: 12px;
   height: 60px;
   width: 70px;
-  border: solid black 6px;
+  border: solid black 3px;
   border-radius: 10px;
-  background-color: #373A47;
-  color: #FFFFFF;
+  background-color: #4DAAF6;
+  color: black;
+  font-weight: bold;
+  opacity: .85;
+}
+.focus-timer-container:hover {
+  opacity: 1;
+  cursor: pointer;
 }
 
 
@@ -209,15 +216,26 @@
 
 /* QUOTES STYLES */
 .home-button-center {
+  position: absolute;
   display: flex;
   justify-content: center;
-  width: 55px;
+  align-items: center;
+  height: 60px;
+  width: 60px;
+  border-radius: 33px;
   margin-right: auto;
   margin-left: auto;
   background-color: #4DAAF6;
   border: solid black 3px;
   border-radius: 15px;
+  opacity: .25;
+  z-index: 2;
 }
+.home-button-center:hover {
+  opacity: 1;
+  cursor: pointer;
+}
+
 .quotes-container-background {
   background-color: #44444C;
   height: 100vh;
@@ -294,10 +312,11 @@
   border-radius: 33px;
   height: 60px;
   width: 60px;
+  opacity: .25;
 }
 .image-modal-center-close:hover {
   cursor: pointer;
-  background-color: #79BFF8;
+  opacity: 1;
 }
 /* Image Content */
 .image-modal-center-overlay {
@@ -345,15 +364,21 @@
 .comment-modal-right-content {
   position: absolute;
   right: 0;
-  margin-right: 5vw;
-  max-height: 95vh;
-  width: 15vw;
+  max-height: 60vh;
+  width: 25vw;
+  background-color: #4DAAF6;
+  border: solid black 3px;
+  box-shadow: 0 0 80px rgb(0,0,0) inset;
   background-attachment: fixed;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
   overflow: auto;
   border-radius: 20px;
+}
+.modal-comment-container {
+  width: 100%;
+  display: flex;
 }
 .modal-comment {
   position: relative;
@@ -362,12 +387,40 @@
   flex-direction: column;
 }
 .modal-comment-input {
-  height: 65px;
+  /* height: 65px; */
   border-radius: 5px;
 }
 .no-comments {
   text-align: center;
-  color: white;
+}
+.modal-comment-content-cont {
+  margin-left: 5px;
+  display: flex;
+  flex-direction: column;
+  max-height: 70px;
+}
+.modal-comment-image {
+  height: 50px;
+  width: 50px;
+  border: solid black 3px;
+  border-radius: 33px;
+  opacity: .9
+}
+.modal-comment-name {
+  font-size: 1.15em;
+  margin-top: 0;
+  margin-bottom: 0;
+}
+.modal-comment-content {
+  display: flex;
+  flex-wrap: wrap;
+  width: 100%;
+  overflow: scroll;
+  margin-top: 0;
+}
+.modal-comment-image:hover {
+  opacity: 1;
+  cursor: pointer;
 }
 
 /********** FONT-AWESOME BUTTONS **********/
@@ -411,10 +464,41 @@
   border-radius: 33px;
   height: 60px;
   width: 60px;
+  opacity: .25;
 }
 .fa-pen:hover {
   cursor: pointer;
+  opacity: 1;
+}
+.fa-arrow-alt-circle-down {
+  margin-right: auto;
+  margin-left: auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 3em;
+  height: 60px;
+  width: 60px;
+  border-radius: 33px;
+  background-color: #4DAAF6;
+  border: solid black 3px;
+  opacity: .25;
+}
+.fa-arrow-alt-circle-down:hover {
   background-color: #79BFF8;
+  opacity: 1;
+  cursor: pointer;
+}
+.fa-trash-alt {
+  position: absolute;
+  right: 0;
+  margin-right: 20px;
+  margin-top: 35px;
+  opacity: .5;
+}
+.fa-trash-alt:hover {
+  opacity: 1;
+  cursor: pointer;
 }
 
 /* MEDIA QUERIES */
