--- a/src/App.css
+++ b/src/App.css
@@ -300,8 +300,8 @@
   box-shadow: none;
 }
 .image-modal-center-close {
-  margin-right: 37px;
-  margin-top: 14px;
+  margin-right: 107px;
+  margin-top: 13px;
   background-color: #4DAAF6;
   border: solid black 3px;
   border-radius: 50px;
@@ -331,8 +331,8 @@
 }
 .modal-image {
   display: flex;
-  width: 93%;
-  height: 90vh;
+  width: 75%;
+  height: 95vh;
   margin-right: auto;
   margin-left: auto;
   position: relative;
@@ -346,7 +346,7 @@
   top: 0;
   bottom: 0;
   margin: 0;
-  width: 80%;
+  width: 70%;
   margin-left: auto;
   margin-right: auto;
   display: flex;
@@ -387,7 +387,6 @@
   flex-direction: column;
 }
 .modal-comment-input {
-  /* height: 65px; */
   border-radius: 5px;
 }
 .no-comments {
@@ -449,6 +448,46 @@
   color: rgb(255, 54, 74);
   transition: color 400ms linear 0s;
 }
+.fa-heartbeat {
+  position: absolute;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  top: 0;
+  right: 0;
+  font-size: 3.3em;
+  background-color: #4DAAF6;
+  border: solid black 3px;
+  border-radius: 15px;
+  height: 60px;
+  width: 60px;
+  opacity: .25;
+  z-index: 1;
+}
+.fa-heartbeat:hover {
+  opacity: 1;
+  cursor: pointer;
+}
+.fa-camera {
+  position: absolute;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  top: 0;
+  right: 0;
+  font-size: 2.9em;
+  background-color: #4DAAF6;
+  border: solid black 3px;
+  border-radius: 15px;
+  height: 60px;
+  width: 60px;
+  opacity: .25;
+  z-index: 1;
+}
+.fa-camera:hover {
+  opacity: 1;
+  cursor: pointer;
+}
 .fa-pen {
   position: absolute;
   display: flex;
@@ -456,8 +495,8 @@
   align-items: center;
   bottom: 0;
   right: 0;
-  margin-right: 33px;
-  margin-bottom: 57px;
+  margin-right: 103px;
+  margin-bottom: 18px;
   font-size: 2em;
   background-color: #4DAAF6;
   border: solid black 3px;
