--- a/src/App.css
+++ b/src/App.css
@@ -438,15 +438,26 @@
   color: black;
 }
 .fa-heart {
+  display: flex;
   justify-content: center;
   align-items: center;
   font-size: 3em;
   color: transparent;
+  width: 75%;
+  height: 95vh;
+  position: absolute;
+  top: 0;
+  margin-top: 5px;
+  margin-left: 96px;
+  border-radius: 33px;
 }
 .fa-heart-beat {
-  font-size: 9em;
-  color: rgb(255, 54, 74);
-  transition: color 400ms linear 0s;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 8em;
+  color: #4DAAF6;
+  transition: color 500ms linear 0s;
 }
 .fa-heartbeat {
   position: absolute;
@@ -504,6 +515,7 @@
   height: 60px;
   width: 60px;
   opacity: .25;
+  z-index: 1;
 }
 .fa-pen:hover {
   cursor: pointer;
