--- a/src/App.css
+++ b/src/App.css
@@ -1,34 +1,6 @@
 /* ALL COMPONENT STYLES */
 
-.font-huge-light {
-  font-size: 7em;
-}
-.font-large-light {
-  font-size: 3em;
-}
-.font-size-light {
-  font-size: 1.15em;
-}
-.font-size-minus-light {
-  font-size: 1em;
-}
-.font-size-plus-light {
-  font-size: 1.6em;
-}
-.button-light {
-  background-color: #4DAAF6;
-  border: solid black 3px;
-  border-radius: 10px;
-  opacity: .25;
-}
-.button-light:hover {
-  opacity: 1;
-  cursor: pointer;
-}
-.cursor-select {
-  cursor: pointer;
-  opacity: .70; 
-}
+
 
 
 
@@ -167,26 +139,41 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  color: white
 }
 .landing-quote { /* theme */
   display: flex;
   justify-content: center;
   align-items: flex-end;
+  text-align: center;
   position: absolute;
   padding: 75px;
   bottom: 0;
   margin-bottom: 0;
   width: 100vw;
   height: 100vh;
-  color: white;
   background: linear-gradient(rgba(10, 10, 10, 0.20), transparent, rgba(10, 10, 10, 0.20));
   z-index: -1;
+}
+.todo-container {
+  margin-top: 15px;
+  max-height: 250px;
+  overflow: scroll;
 }
 .todo-spread {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+}
+.todo-input {
+  position: sticky;
+  top: 0;
+}
+.todo-input-field {
+  border-radius: 5px;
+  opacity: .75;
+}
+.todo-input-field:hover {
+  opacity: 1;
 }
 .get-inspired {
   height: 80px;
@@ -196,7 +183,6 @@
   bottom: 0;
   left: 0;
   right: 0;
-
   margin-bottom: 16vh;
   margin-right: auto;
   margin-left: auto;
@@ -280,7 +266,6 @@
   margin-left: auto;
   text-align: center;
   z-index: 1;
-  color: white;
 }
 
 
@@ -355,7 +340,9 @@
   align-items: center;
   text-align: center;
   padding-bottom: 160px;
-  color: white;
+}
+.modal-theme-switch {
+  z-index: 1;
 }
 /* Comment Content */
 .comment-modal-right-overlay {
@@ -540,6 +527,22 @@
   opacity: 1;
   cursor: pointer;
 }
+.fa-check {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 35px;
+  width: 35px;
+  border-radius: 33px;
+  font-size: 1.7em;
+  color: black;
+  margin-bottom: 5px;
+}
+.fa-check:hover {
+  background-color: #79BFF8;
+  opacity: 1;
+  cursor: pointer;
+}
 .fa-trash-alt {
   position: absolute;
   right: 0;
@@ -552,4 +555,47 @@
   cursor: pointer;
 }
 
-/* MEDIA QUERIES */
+/* ALL APP STYLES */
+
+.font-huge-light {
+  font-size: 7em;
+  color: white;
+}
+.font-large-light {
+  font-size: 3em;
+  font-weight: bold;
+  color: white;
+}
+.font-size-light {
+  font-size: 1.15em;
+  color: white;
+}
+.font-size-minus-light {
+  font-size: 1em;
+  color: white;
+}
+.font-size-plus-light {
+  font-size: 1.6em;
+  font-weight: bold;
+  color: white;
+}
+.font-size-plus-dark {
+  font-size: 1.6em;
+  font-weight: bold;
+  color: black;
+}
+.button-light {
+  background-color: #4DAAF6;
+  color: black;
+  border: solid black 3px;
+  border-radius: 10px;
+  opacity: .35;
+}
+.button-light:hover {
+  opacity: 1;
+  cursor: pointer;
+}
+.cursor-select {
+  cursor: pointer;
+  opacity: .70; 
+}
